--- a/html/home.html
+++ b/html/home.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poefo Library</title>
-    <link rel="stylesheet" href="/style/style_splash.css">
+    <link rel="stylesheet" href="https://firebasestorage.googleapis.com/v0/b/captu-libraly.firebasestorage.app/o/captu-libraly%2Fstyle%2Fstyle_splash.css?alt=media&token=dcf11dda-04bd-416a-94ea-72cf2ae97e44">
 </head>
 <body>
     <div class="main-screen">
         <div id="status"></div>
 
         <div class="header-bar app-header">
-            <img src="/images/icon_logo.png" alt="Enviar" class="logo">
+            <img src="https://firebasestorage.googleapis.com/v0/b/captu-libraly.firebasestorage.app/o/captu-libraly%2Fstyle%2Fimages_icones%2Ficon_logo.png?alt=media&token=6abdd2c4-0f6d-4cf3-9198-e2f22c59aec9" alt="Enviar" class="logo">
             <span class="app-title">Poefo Library</span>
             <div>
                 <img src="/images/send_ic.png" alt="Enviar" class="header-icon send-icon">
                 <img src="/images/notification_ic.png" alt="Notificações" class="header-icon notification-icon">
             </div>
         </div>
-        
+
 
         <div class="search-bar">
             <div class="search-input">
                  <img src="/images/search.png" alt="search" class="img_geral">
                 <span>Pesquisar...</span>
             </div>
+          
 
         </div>
 
