--- a/html/splash.html
+++ b/html/splash.html
@@ -19,7 +19,7 @@
 <body>
     <div class="app-screen">
         <div class="content-center">
-            <img src="/images/icon_logo.png" alt="Ícone Principal do Aplicativo" class="app-icon">
+            <img src="https://firebasestorage.googleapis.com/v0/b/captu-libraly.firebasestorage.app/o/captu-libraly%2Fstyle%2Fimages_icones%2Ficon_logo.png?alt=media&token=6abdd2c4-0f6d-4cf3-9198-e2f22c59aec9" alt="Ícone Principal do Aplicativo" class="app-icon">
             <p class="app-text">Captu Library</p>
         </div>
     </div>
