--- a/html/livro.html
+++ b/html/livro.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do Livro</title>
-    <link rel="stylesheet" href="/style/style_splash.css">
+    <link rel="stylesheet" href="../style/style_splash.css">
 </head>
 <body>
     <div class="main-screen">
         <div class="header-bar app-header">
-            <img src="/images/icon_logo.png" alt="Logo" class="logo">
+            <img src="../images/icon_logo.png" alt="Logo" class="logo">
             <span class="app-title">Poefo Library</span>
         </div>
         <div id="book-details-container"></div>
