--- a/html/splash.html
+++ b/html/splash.html
@@ -7,19 +7,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/style/style_splash.css">
+  <link rel="stylesheet" href="../style/style_splash.css">
     
     <script>
         // Redireciona para a tela principal (main.html) após 5 segundos (5000ms)
         setTimeout(function() {
-            window.location.href = 'home.html';
+            window.location.href = './home.html';
         }, 3000); 
     </script>
+    
 </head>
 <body>
     <div class="app-screen">
         <div class="content-center">
-            <img src="https://firebasestorage.googleapis.com/v0/b/captu-libraly.firebasestorage.app/o/captu-libraly%2Fstyle%2Fimages_icones%2Ficon_logo.png?alt=media&token=6abdd2c4-0f6d-4cf3-9198-e2f22c59aec9" alt="Ícone Principal do Aplicativo" class="app-icon">
+            <img src="..//images/icon_logo.png" alt="Ícone Principal">
             <p class="app-text">Captu Library</p>
         </div>
     </div>
